objects/ccrz__E_RuleSourceSpec__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__MinQty__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>ccrz__E_Rule__c</referenceTo>
        <relationshipLabel>Rule Source Specs</relationshipLabel>
        <relationshipName>Rule_Source_Specs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__SpecValue__c</fullName>
        <label>Spec Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Spec__c</fullName>
        <label>Spec</label>
        <referenceTo>ccrz__E_Spec__c</referenceTo>
        <relationshipLabel>Rule Source Specs</relationshipLabel>
        <relationshipName>Rule_Source_Specs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>CC Rule Source Spec</label>
    <nameField>
        <label>Rule Source Spec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rule Source Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>